--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -17,7 +17,7 @@
     .main-grid {
         display: grid;
         grid-template-columns: repeat(1, auto);
-        grid-template-rows: auto auto auto auto 300px;
+        grid-template-rows: auto auto auto auto auto;
     }
 
     .hero img {
@@ -75,6 +75,7 @@
         grid-column: 1/3;
         grid-row: 5/6;
         gap: 5px;
+        
     }
 
     /*------- Discover page------- */
@@ -145,7 +146,7 @@
         grid-template-columns: auto auto;
     }
 
-    .join-small-view,
+    /* .join-small-view, */
     .beni-bellow em,
     .direc-page p:nth-child(3) {display: none;}
 
@@ -156,7 +157,7 @@
         margin-top: -43px;
     }
 
-    .join-large-view {
+    /* .join-large-view {
         display: grid;
         grid-column: 1/3;
         color: whitesmoke;
@@ -169,7 +170,7 @@
         box-shadow: 2px 2px 5px black;
         margin-bottom: 40px;
         font-size: 24px;
-    }
+    } */
 
     .form-title {
         display: grid;
@@ -243,6 +244,7 @@
     .list section:nth-child(odd) {
         background-color: #d0f3e9;
     }
+
 
     
 
